--- a/app/src/main/res/layout/fragment_planet.xml
+++ b/app/src/main/res/layout/fragment_planet.xml
@@ -14,17 +14,10 @@
   limitations under the License.
   -->
 
-<resources>
-    <string name="app_name">Catlicious</string>
-    <string-array name="planets_array">
-        <item>Animals</item>
-        <item>Food</item>
-    </string-array>
-    <string name="drawer_open">Open navigation drawer</string>
-    <string name="drawer_close">Close navigation drawer</string>
-    <string name="action_websearch">Web search</string>
-    <string name="app_not_available">Sorry, there\'s no web browser available</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-</resources>
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/image"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#000000"
+    android:gravity="center"
+    android:padding="32dp" />
