--- a/app/src/main/res/layout/fragment_add_animal.xml
+++ b/app/src/main/res/layout/fragment_add_animal.xml
@@ -5,9 +5,46 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TODO add animal" />
+    <LinearLayout android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+
+
+        <ImageView
+            android:id="@+id/image_from_camera"
+            android:layout_width="match_parent"
+            android:layout_height="218dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="0.54"
+            android:src="@drawable/camera" />
+
+        <Button
+            android:id="@+id/select_image_gallery"
+            android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:text="select an image from gallery" />
+
+        <EditText
+            android:id="@+id/animalName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name" />
+
+        <Button
+            android:id="@+id/save_animal"
+            android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:text="save" />
+
+
+    </LinearLayout>
+
+
 </FrameLayout>
