--- a/app/src/main/res/layout/fragment_add_animal.xml
+++ b/app/src/main/res/layout/fragment_add_animal.xml
@@ -10,7 +10,8 @@
         android:layout_height="match_parent"
         android:weightSum="1"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true">
 
 
         <ImageView
