introduced service for camera / gallery functionality; added add food view

--- a/app/src/main/res/layout/fragment_add_food.xml
+++ b/app/src/main/res/layout/fragment_add_food.xml
@@ -2,10 +2,43 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TODO add food" />
+    <LinearLayout android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true">
 
+        <ImageView
+            android:id="@+id/food_image_from_camera"
+            android:layout_width="match_parent"
+            android:layout_height="153dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/can_large" />
+
+        <EditText
+            android:id="@+id/brand_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Brand e.g. Whiskas" />
+
+        <EditText
+            android:id="@+id/sort_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Sort e.g. Beef" />
+
+        <Button
+            android:id="@+id/save_food"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="save" />
+
+
+    </LinearLayout>
 </FrameLayout>
