--- a/app/src/main/res/layout/fragment_animallist.xml
+++ b/app/src/main/res/layout/fragment_animallist.xml
@@ -9,8 +9,17 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
+        <Button
+            android:id="@+id/create_animal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:text="add animal"
+            android:layout_alignParentEnd="true" />
+
         <ListView
-            android:id="@+id/allAnimals_profiles"
+            android:id="@+id/allAnimals"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true" />
