--- a/app/src/main/res/layout/fragment_edit_animal.xml
+++ b/app/src/main/res/layout/fragment_edit_animal.xml
@@ -2,4 +2,45 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <LinearLayout android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true">
+
+
+        <ImageView
+            android:id="@+id/edit_animal_image_from_camera"
+            android:layout_width="match_parent"
+            android:layout_height="218dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="0.54"
+            android:src="@drawable/camera" />
+
+        <Button
+            android:id="@+id/edit_animal_select_image_gallery"
+            android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:text="select an image from gallery" />
+
+        <EditText
+            android:id="@+id/edit_animalName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name" />
+
+        <Button
+            android:id="@+id/update_animal"
+            android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:text="update" />
+
+
+    </LinearLayout>
 </FrameLayout>
