--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -18,7 +18,7 @@
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/how_to_access_menu"
                 android:layout_marginTop="96dp"
-                android:id="@+id/imageView"
+                android:id="@+id/howToImage"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="16dp"/>
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/logo_cat"
-                android:id="@+id/imageView2"
+                android:id="@+id/bigLogo"
                 android:layout_marginBottom="166dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"/>
